# Releases

## v0.4.0

* add previous hash to upgrade salt schedule
* add more tests

## v0.3.0

* add password strength upgrader

## v0.2.0

* Substantial refactorings
* Add reference tests for password hasher

## v0.1.0

initial version